--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt-nodejs": "*",
     "body-parser": "*",
     "express": "*",
+    "ejs": "*",
     "fs": "*",
     "jwt": "*",
     "mongodb": "*",
