--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app"
   },
   "dependencies": {
+    "axios":"*",
     "bcrypt-nodejs": "*",
     "body-parser": "*",
     "express": "*",
