--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node app"
   },
   "dependencies": {
+    "apicache": "*",
     "axios": "*",
     "bcrypt": "*",
     "bcrypt-nodejs": "*",
