messaging is working now

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "*",
     "bcrypt-nodejs": "*",
     "body-parser": "*",
+    "cookie-parser": "*",
     "crypto": "*",
     "dateformat": "*",
     "express": "*",
